<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defaultBackground"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="be.wilson.projetjanvier2018.ResultsActivity">

        <!-- Titre -->
        <TextView
            android:layout_height="wrap_content"
            android:text="@string/results_title"
            style="@style/title"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:id="@+id/results_title" />

        <!-- Liste des villes -->
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/list_items"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/results_title">

        </TableLayout>

        <!-- Bouton précédent -->
        <Button
            android:layout_width="@dimen/btn_width2"
            android:layout_height="wrap_content"
            style="@style/btn1"
            android:text="@string/prev_btn"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/list_items"
            android:id="@+id/prev_btn"
            android:enabled="false"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <!-- Bouton suivant -->
        <Button
            android:layout_width="@dimen/btn_width2"
            android:layout_height="wrap_content"
            style="@style/btn1"
            android:text="@string/next_btn"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/list_items"
            android:id="@+id/next_btn"
            android:enabled="false"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <!-- Bouton tri -->
        <Button
            android:layout_width="@dimen/btn_width1"
            android:layout_height="wrap_content"
            style="@style/btn1"
            android:text="@string/asc_sort"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/next_btn"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/sort_btn"/>

        <!-- Bouton retour -->
        <Button
            android:layout_width="@dimen/btn_width1"
            android:layout_height="wrap_content"
            style="@style/btn1"
            android:text="@string/back"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/sort_btn"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/resulsts_back_btn"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>