<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defaultBackground"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="be.wilson.projetjanvier2018.HomeActivity">

        <!-- Titre -->
        <TextView
            android:layout_height="wrap_content"
            android:text="@string/home_title"
            style="@style/title"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:id="@+id/home_title"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="0dp" />

        <!-- Bouton d'appel de l'activité d'ajout d'un article -->
        <Button
            android:layout_width="@dimen/btn_width1"
            android:layout_height="wrap_content"
            android:text="@string/add_title"
            android:layout_marginTop="122dp"
            app:layout_constraintTop_toBottomOf="@+id/home_title"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/home_add_btn"
            app:layout_constraintHorizontal_bias="0.501"
            style="@style/btn1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <!-- Bouton d'appel de l'activité de recherche d'article par prix -->
        <Button
            android:layout_width="@dimen/btn_width1"
            android:layout_height="wrap_content"
            android:text="@string/search_p_title"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/home_srch_p_btn"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/home_add_btn"
            style="@style/btn1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <!-- Bouton d'appel de l'activité de recherche d'article par ville -->
        <Button
            android:layout_width="@dimen/btn_width1"
            android:layout_height="wrap_content"
            android:text="@string/search_c_title"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/home_srch_c_btn"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/home_srch_p_btn"
            style="@style/btn1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>